# DNS-reverseproxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
caddy/conf/: Caddyfile
docs/: edge-controller-design.md  edge-controller-implementation-guide.md
edge_controller/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
edge_controller/routers/: __init__.py  api.py  web.py
edge_controller/services/: __init__.py  audit.py  caddy_manager.py  caddy_renderer.py
edge_controller/static/: app.css
edge_controller/templates/: base.html  dns_records.html  proxy_routes.html
tests/: test_caddy_renderer.py
