[project]
name = "edge-controller"
version = "0.1.0"
description = "Home lab DNS and reverse proxy edge controller"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["edge_controller*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
